--- a/dashboard/src/css/AdminSidebar.css
+++ b/dashboard/src/css/AdminSidebar.css
@@ -151,7 +151,7 @@
 
 .admin-sidebar.admin-sidebar--desktop.admin-sidebar--collapsed .admin-sidebar__nav-link .admin-sidebar__icon {
   margin-right: 0;
-  font-size: 24px;
+  font-size: 22px;
 }
 
 .admin-sidebar__nav-link .admin-sidebar__text {
@@ -168,9 +168,13 @@
 
 .admin-sidebar.admin-sidebar--desktop.admin-sidebar--collapsed .admin-sidebar__nav-link {
   justify-content: center;
-  padding: 12px;
+  padding: 15px 0;
+  margin: 0 10px;
   cursor: pointer;
   position: relative;
+  height: 50px;
+  display: flex;
+  align-items: center;
 }
 
 /* Add hover effect for collapsed icons */
