--- a/dashboard/src/css/MsmeDashboard.css
+++ b/dashboard/src/css/MsmeDashboard.css
@@ -279,6 +279,7 @@
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.2;
+  text-align: left;
 }
 
 .msme-dashboard__product-price {
@@ -286,6 +287,7 @@
   color: #666;
   font-family: 'Poppins', sans-serif;
   font-size: 12px;
+  text-align: left;
 }
 
 .msme-dashboard__product-right {
